--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "topthink/think-migration": "1.*",
         "topthink/think-queue": "1.*",
         "topthink/think-helper": "1.*",
-        "5ini99/think-auth": "^1.0"
+        "5ini99/think-auth": "^1.0",
+        "qiniu/php-sdk": "^7.2"
     },
     "autoload": {
         "psr-4": {
